Modification Projet perso

--- a/Publications/publi.html
+++ b/Publications/publi.html
@@ -61,11 +61,11 @@
 
           <p class="resume"
              data-en="Algorithm, pseudocode, termination proof, and Python implementation with complexity analysis.">
-            Algorithme, pseudo-code, preuve de terminaison et implémentation Python avec analyse de complexité.
+            Ce projet implémente l'algorithme de dichotomie en Python, accompagné de sa documentation théorique/énoncé au format PDF.
           </p>
 
           <div class="actions">
-            <a class="btn" href="https://github.com/YassineT-git/Dichotomie/blob/main/Dichotomie.pdf" target="_blank" title="PDF">
+            <a class="btn" href="/Publications/asset/dichotomie/Dichotomie.pdf" target="_blank" title="PDF">
               <i class="fa-solid fa-file-pdf" aria-hidden="true"></i>
             </a>
             <a class="btn btn-ghost" href="https://github.com/YassineT-git/dichotomie" target="_blank" rel="noopener" title="Code">
@@ -74,68 +74,27 @@
           </div>
         </article>
 
-        <!-- PROJET 2 -->
-        <article class="pub-card" data-cat="maths">
+      <!-- PROJET 2 -->
+        <article class="pub-card" data-cat="informatique">
           <header>
-            <h3 data-en="Levenshtein Distance (Python)">La distance de Levenshtein (Python)</h3>
+            <h3 data-en="Binary Search (Python)">Approximation de pi</h3>
+            <span class="tag" data-en="Computer Science">informatique</span>            
             <span class="tag" data-en="Mathematics">Mathématiques</span>
-            <span class="tag" data-en="Computer Science">Informatique</span>
           </header>
 
           <p class="resume"
-             data-en="Inequalities, auxiliary sequences, convergence and induction proofs with progressive exercises.">
-            Inégalités, suites auxiliaires, convergence et preuves par récurrence avec exercices progressifs.
-          </p>
+             data-en="This project presents a C implementation of a Monte Carlo method for estimating the value of Pi (π).">
+            Ce projet propose une implémentation en langage C d'un algorithme d'estimation du nombre Pi (π) utilisant la méthode de Monte-Carlo.
+            </p>
 
           <div class="actions">
-            <a class="btn" href="files/maths/suites-recurrence.pdf" title="PDF">
-              <i class="fa-solid fa-file-pdf" aria-hidden="true"></i>
-            </a>
-            <a class="btn btn-ghost" href="files/maths/suites-recurrence.tex" title="Source LaTeX">
+            <a class="btn" href="https://github.com/YassineT-git/approximationPi" target="_blank" rel="noopener" title="Code">
               <i class="fa-solid fa-code" aria-hidden="true"></i>
             </a>
           </div>
         </article>
 
-        <!-- PROJET 3 -->
-        <article class="pub-card" data-cat="autres">
-          <header>
-            <h3 data-en="Prime Number Concentration">La concentration des nombres premiers</h3>
-            <span class="tag" data-en="Mathematics">Mathématiques</span>
-            <span class="tag" data-en="Computer Science">Informatique</span>
-          </header>
 
-          <p class="resume"
-             data-en="Critical analysis of ethical and scientific issues related to bio-enhancement and biotechnology.">
-            Analyse critique des enjeux éthiques et scientifiques liés à la bio-augmentation et aux biotechnologies.
-          </p>
-
-          <div class="actions">
-            <a class="btn" href="../Portfolio/assets/CV_Yassine.pdf" target="_blank" rel="noopener" title="PDF">
-              <i class="fa-solid fa-file-pdf" aria-hidden="true"></i>
-            </a>
-          </div>
-        </article>
-
-        <!-- PROJET 4 -->
-        <article class="pub-card" data-cat="autres">
-          <header>
-            <h3 data-en="The Doppler Effect">L'effet de Doppler</h3>
-            <span class="tag" data-en="Mathematics">Mathématiques</span>
-            <span class="tag" data-en="Computer Science">Informatique</span>
-          </header>
-
-          <p class="resume"
-             data-en="Critical analysis of ethical and scientific issues related to bio-enhancement and biotechnology.">
-            Analyse critique des enjeux éthiques et scientifiques liés à la bio-augmentation et aux biotechnologies.
-          </p>
-
-          <div class="actions">
-            <a class="btn" href="../Portfolio/assets/CV_Yassine.pdf" target="_blank" rel="noopener" title="PDF">
-              <i class="fa-solid fa-file-pdf" aria-hidden="true"></i>
-            </a>
-          </div>
-        </article>
 
       </section>
     </section>
