Ajout de la traduction en anglais

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -206,8 +206,8 @@
                 </button>
                 <div class="tl-panel" id="tl2" hidden>
                   <ul class="tl-list">
-                    <li data-en=""> De nombreuses comptetences techniques et sociales</li>
-                    <li data-en=""> Des projets informatique tout seul ou à plusieurs</li>
+                    <li data-en="Many technical and social skills"> De nombreuses comptetences techniques et sociales</li>
+                    <li data-en="Many projects in computer science"> Des projets informatique tout seul ou à plusieurs</li>
                     <br>
                     <a class=btn href="../Portfolio/projets.html" data-en="See More Projects"> Voir + de projets </a>
                   </ul>
