--- a/Portfolio/projets.html
+++ b/Portfolio/projets.html
@@ -13,11 +13,11 @@
 <body>
   <header class="pub-topbar" role="banner">
     <div class="crumbs" aria-label="Fil d’Ariane">
-      <a href="../index.html">~/Accueil</a>
+      <a href="../index.html" data-en="~/Home">~/Accueil</a>
         <span class="sep">/</span>
       <a href="index.html">Portfolio</a>
         <span class="sep">/</span>
-      <span class="here">Projets</span>
+      <span class="here" data-en="Projects">Projets</span>
     </div>    
     <button id="langPush" class="lang-push" aria-label="Changer de langue" type="button">
       <span class="stack" aria-hidden="true">
@@ -28,6 +28,8 @@
       </span>
     </button>
   </header>
+
+
   <div class="app" id="app">
     <aside class="sidebar" id="sidebar" aria-label="Barre latérale">
       <div class="sidebar-header">
@@ -36,9 +38,9 @@
       </div>
       <div class="sidebar-body">
         <nav class="card nav-card" aria-label="Navigation">
-          <a class="nav-link" href="index.html"><i class="fas fa-house"></i> <span>Accueil</span></a>
-          <a class="nav-link" href="competences.html"><i class="fas fa-brain"></i> <span>Compétences</span></a>
-          <a class="nav-link" href="projets.html"><i class="fas fa-folder"></i> <span>Projets</span></a>
+          <a class="nav-link" href="index.html"><i class="fas fa-house"></i> <span data-en="Home">Accueil</span></a>
+          <a class="nav-link" href="competences.html"><i class="fas fa-brain"></i> <span data-en="Skills">Compétences</span></a>
+          <a class="nav-link" href="projets.html"><i class="fas fa-folder"></i> <span data-en="Projects"> Projets</span></a>
         </nav>
         <div class="card nav-card">
           <a class="nav-link" href="mailto:yassinetahiri.pro@gmail.com" target="_blank" rel="noopener noreferrer">
@@ -55,8 +57,8 @@
     <main>
       <div class="container">
         <header class="hero">
-          <h1>Mes projets</h1>
-          <p>Réalisations en développement, réseau, sécurité & plus encore.</p>
+          <h1 data-en="My Projects">Mes projets</h1>
+          <p data-en="Realizations in development, networking, cybersecurity and more."> Réalisations en développement, réseau, sécurité & plus encore.</p>
         </header>
 
         <!-- Section 1 -->
@@ -67,8 +69,8 @@
             <img
                 src="assets/projets/p1/log.png"
                 alt="Vignette projet Cybersécu">
-            <h3>Application Java de gestion</h3>
-            <div class="mini-tags"><span>Java</span><span>Git</span><span>Swing</span><span>IHM</span></div>
+            <h3 data-en="Java Management Application">Application Java de gestion</h3>
+            <div class="mini-tags"><span>Java</span><span>Git</span><span>Swing</span><span data-en="UI">IHM</span></div>
             </article>
 
             <!-- Projet 2 -->
@@ -76,7 +78,7 @@
             <img
               src="assets/projets/p2/chevalier-pixel.gif" 
               alt="Vignette projet WPF">
-            <h3>Jeu vidéo 2D en C++ avec SDL2</h3>
+            <h3 data-en="2D Video Game in C++ with SDL2">Jeu vidéo 2D en C++ avec SDL2</h3>
             <div class="mini-tags"><span>C++</span><span>SDL2</span></div>
           </article>
 
@@ -85,15 +87,15 @@
               <img
                 src="assets/projets/p3/Rasperry.webp"
                 alt="Vignette projet Réseaux">
-              <h3>Configuration d’un Raspberry Pi</h3>
-              <div class="mini-tags"><span>Linux</span><span>Raspberry Pi</span><span>Routage</span></div>
+              <h3 data-en="Raspberry Pi Configuration">Configuration d’un Raspberry Pi</h3>
+              <div class="mini-tags"><span>Linux</span><span>Raspberry Pi</span><span data-en="Routing">Routage</span></div>
             </article>
 
             <article class="project-card" data-project="p4" >
               <img
                 src="assets/projets/p5/saeRes.png"
                 alt="Vignette projet Java Swing CIUP">
-              <h3>Configuration d'un réseau</h3>
+              <h3 data-en="Network Configuration">Configuration d'un réseau</h3>
               <div class="mini-tags"><span>Linux Debian</span><span>DNS</span><span>SSH</span><span>DHCP</span></div>
             </article>
 
@@ -113,7 +115,7 @@
       <div class="project-modal" id="projectModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
           <button class="close-btn" id="closeModal" aria-label="Fermer la modale">×</button>
           <div class="modal-tabs">
-              <button class="tab" data-tab="tech">Description</button>
+              <button class="tab" data-tab="tech" data-en="Description"> Description</button>
           </div>
 
           <!-- La galerie est injectée ici en JS (pas besoin d’écrire les images en HTML) -->
