Ajout de la traduction

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 
       <nav class="cta" aria-label="Liens principaux">
         <a class="btn btn-primary" href="Portfolio/index.html" target="_blank" rel="noopener">
-          <span class="icon" aria-hidden="true">
-            <i class="fa-solid fa-code"></i>
-          </span>
-          Portfolio
+          <span class="icon" aria-hidden="true"> <i class="fa-solid fa-code"></i></span>Portfolio
         </a>
 
         <a class="btn btn-ghost" href="Publications/publi.html" id="btn-publications">
