--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -166,9 +166,9 @@
             <div class="bento-item bento-tall card reveal" data-span="1">
               <h3 data-en="Language Levels">Niveaux de langues</h3>
               <ul class="pills">
-                <li class="pill"><span> Français — natif </span></li>
-                <li class="pill"><span> Anglais — B2/C1 </span></li>
-                <li class="pill"><span> Espagnol — A2 </span></li>
+                <li class="pill"><span data-en="French — Native"> Français — natif </span></li>
+                <li class="pill"><span data-en="English — B2/C1"> Anglais — B2/C1 </span></li>
+                <li class="pill"><span data-en="Spanish — A2"> Espagnol — A2 </span></li>
               </ul>
             </div>
             <div class="bento-item card reveal" data-span="1">
