Ajout d'un lien JS

--- a/Portfolio/competences.html
+++ b/Portfolio/competences.html
@@ -482,5 +482,6 @@
     </main>
   </div>
   <script src="js/main.js" defer></script>
+  <script src="../Publications/js/publications.js" defer></script>
 </body>
 </html>
