--- a/Portfolio/competences.html
+++ b/Portfolio/competences.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-  <title>Portfolio — Compétences</title>
+  <title data-en="Portfolio — Skills">Portfolio — Compétences</title>
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link rel="stylesheet" href="css/competences.css" />
   <link rel="stylesheet" href="css/styles.css" />
@@ -13,11 +13,11 @@
 <body>
   <header class="pub-topbar" role="banner">
     <div class="crumbs" aria-label="Fil d’Ariane">
-      <a href="../index.html">~/Accueil</a>
+      <a href="../index.html" data-en="~/Home">~/Accueil</a>
       <span class="sep">/</span>
-      <a href="index.html">Portfolio</a>
+      <a href="index.html" data-en="Portfolio">Portfolio</a>
       <span class="sep">/</span>
-      <span class="here">Compétences</span>
+      <span class="here" data-en="Skills">Compétences</span>
     </div>    
     <button id="langPush" class="lang-push" aria-label="Changer de langue" type="button">
       <span class="stack" aria-hidden="true">
@@ -38,9 +38,9 @@
       </div>
       <div class="sidebar-body">
         <nav class="card nav-card" aria-label="Navigation">
-          <a class="nav-link" href="index.html"><i class="fas fa-house"></i> <span>Accueil</span></a>
-          <a class="nav-link" href="competences.html"><i class="fas fa-brain"></i> <span>Compétences</span></a>
-          <a class="nav-link" href="projets.html"><i class="fas fa-folder"></i> <span>Projets</span></a>
+          <a class="nav-link" href="index.html"><i class="fas fa-house"></i> <span data-en="Home">Accueil</span></a>
+          <a class="nav-link" href="competences.html"><i class="fas fa-brain"></i> <span data-en="Skills">Compétences</span></a>
+          <a class="nav-link" href="projets.html"><i class="fas fa-folder"></i> <span data-en="Projects">Projets</span></a>
         </nav>
         <div class="card nav-card">
           <a class="nav-link" href="mailto:yassinetahiri.pro@gmail.com" target="_blank" rel="noopener noreferrer">
@@ -57,18 +57,18 @@
     <main>
       <div class="container">
         <header class="hero">
-          <h1>Compétences</h1>
-          <p>Un aperçu des technologies que j’utilise au quotidien — avec mon niveau et des exemples d’usage.</p>
+          <h1 data-en="Skills">Compétences</h1>
+          <p data-en="An overview of the technologies I use daily — with my level and usage examples.">Un aperçu des technologies que j’utilise au quotidien — avec mon niveau et des exemples d’usage.</p>
         </header>
 
         <!-- Filtres (sélection unique) -->
         <section class="section">
           <div class="filter-bar" role="group" aria-label="Filtres de compétences">
-            <button class="filter-chip active" data-filter="*">Tous</button>
+            <button class="filter-chip active" data-filter="*" data-en="All">Tous</button>
             <button class="filter-chip" data-filter="langage">Langages</button>
             <button class="filter-chip" data-filter="framework">Frameworks</button>
-            <button class="filter-chip" data-filter="ide">IDE</button>
-            <button class="filter-chip" data-filter="base">Bases</button>
+            <button class="filter-chip" data-filter="ide" data-en="IDE">IDE</button>
+            <button class="filter-chip" data-filter="base" data-en="DB">Bases</button>
             <button class="filter-chip" data-filter="outil">Outils</button>
             <button class="filter-chip" data-filter="systeme">Systèmes</button>
             <button class="filter-chip" data-filter="devops">DevOps</button>
@@ -93,7 +93,7 @@
                 </div>
               </div>
               <p class="skill-text"
-              data-en="">
+              data-en="Object-oriented programming, collections, exception handling, threads and I/O. Console/desktop application development, Spring Boot basics and unit testing with JUnit.">
                 Programmation orientée objet, collections, gestion des exceptions,
                 threads et I/O. Développement d’applications console/desktop,
                 bases Spring Boot et tests unitaires avec JUnit.
