Mise à jour des descriptions des cours de mathématiques et correction du lien vers le PDF dans les publications

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -146,8 +146,9 @@
                 </button>
                 <div class="tl-panel" id="exp4" hidden>
                   <ul class="tl-list">
-                    <li data-en="Development of an internal application in React and Node.js.">Développement de l'application interne en React et Node.js.</li>
-                    <li data-en="Database management and cloud deployment.">Gestion de base de données et déploiement cloud.</li>
+                    <li data-en="Creation of mathematics courses.">Création de cours de mathématiques.</li>
+                    <li data-en="Homework assistance and student mentoring.">Aide aux devoirs et accompagnement des élèves.</li>
+                    <li data-en="Homework assistance and student mentoring.">Aide aux devoirs et accompagnement des élèves.</li>
                   </ul>
                 </div>
               </div>
