--- a/Publications/publi.html
+++ b/Publications/publi.html
@@ -65,7 +65,7 @@
           </p>
 
           <div class="actions">
-            <a class="btn" href="/Publications/asset/dichotomie/Dichotomie.pdf" target="_blank" title="PDF">
+            <a class="btn" href="../Publications/asset/dichotomie/Dichotomie.pdf" target="_blank" title="PDF">
               <i class="fa-solid fa-file-pdf" aria-hidden="true"></i>
             </a>
             <a class="btn btn-ghost" href="https://github.com/YassineT-git/dichotomie" target="_blank" rel="noopener" title="Code">
