--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -76,16 +76,38 @@
           <h2 id="exp-title" data-en="Professional Experiences">Expériences professionnelles</h2>
           <div class="timeline" id="experience-timeline">
 
+            <article class="tl-item" data-direction="right">
+              <div class="tl-card">
+                <button class="tl-header" aria-expanded="false" data-target="exp1">
+                  <span class="tl-chev" aria-hidden="true">›</span>
+                  <h3 class="tl-title" data-en="Project Manager Assistant">Apprenti chef de projet</h3>
+                  <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
+                  <span class="tl-meta">Novatine <br>2025-Présent · Île-de-France</span>
+                </button>
+                <div class="tl-panel" id="exp1" hidden>
+                  <ul class="tl-list">
+                    <li data-en="Contribution to the management of cybersecurity projects: scoping, planning and operational follow-up.">Contribution au pilotage de projets cybersécurité : cadrage, planification et suivi opérationnel</li>
+                    <li data-en="Deployment of EDR and SIEM solutions in a professional environment.">Déploiement de solutions EDR et SIEM dans un environnement professionnel</li>
+                    <li data-en="Realization of security audits and participation in LPM homologation processes.">Réalisation d’audits de sécurité et participation aux processus d’homologation LPM</li>
+                    <li data-en="Organization of daily meetings with technical teams to ensure effective follow-up.">Organisation de réunions quotidiennes avec les équipes techniques pour assurer un suivi efficace.</li>
+                    <li data-en="Analysis and exploitation of data in AI-related projects.">Analyse et exploitation de données dans des projets liés à l’IA</li>
+                    <li data-en="Design of training materials in cybersecurity.">Conception de supports de formation en cybersécurité</li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+
             <!-- Experience 1 -->
             <article class="tl-item" data-direction="left">
               <div class="tl-card">
-                <button class="tl-header" aria-expanded="false" data-target="exp1">
+                <button class="tl-header" aria-expanded="false" data-target="exp2">
                   <span class="tl-chev" aria-hidden="true">›</span>
                   <h3 class="tl-title" data-en="Project Manager Assistant">Assistant chef de projet</h3>
                   <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
                   <span class="tl-meta">Novatine <br>2024-2025 · Île-de-France</span>
                 </button>
-                <div class="tl-panel" id="exp1" hidden>
+                <div class="tl-panel" id="exp2" hidden>
                   <ul class="tl-list">
                     <li data-en="Coordination of the deployment of a Data Loss Prevention (DLP) solution within three subsidiaries.">Coordination du déploiement d'une solution de Data Loss Prevention (DLP) au sein de trois filiales.</li>
                     <li data-en="Development and follow-up of the deployment schedule, ensuring adherence to deadlines.">Élaboration et suivi du planning de déploiement, garantissant le respect des délais.</li>
@@ -99,13 +121,13 @@
             <!-- Experience 2 -->
             <article class="tl-item" data-direction="right">
               <div class="tl-card">
-                <button class="tl-header" aria-expanded="false" data-target="exp2">
+                <button class="tl-header" aria-expanded="false" data-target="exp3">
                   <span class="tl-chev" aria-hidden="true">›</span>
                   <h3 class="tl-title" data-en="Cybersecurity Intern">Stagiaire en Cybersécurité </h3>
                   <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
                   <span class="tl-meta">Open BPO <br> Été 2023 · Île-de-France</span>
                 </button>
-                <div class="tl-panel" id="exp2" hidden>
+                <div class="tl-panel" id="exp3" hidden>
                   <ul class="tl-list">
                     <li data-en="Participation in the deployment of an EDR solution in a professional environment.">Participation au déploiement d’une solution EDR dans un environnement professionnel.</li>
                     <li data-en="Participation in the drafting of technical documents detailing deployment steps and best practices for EDR usage.">Participation à la rédaction de documents techniques détaillant les étapes de déploiement et les bonnes pratiques pour l’utilisation de l’EDR.</li>
@@ -119,13 +141,13 @@
             <!-- Experience 3 -->
             <article class="tl-item" data-direction="left">
               <div class="tl-card">
-                <button class="tl-header" aria-expanded="false" data-target="exp3">
+                <button class="tl-header" aria-expanded="false" data-target="exp4">
                   <span class="tl-chev" aria-hidden="true">›</span>
                   <h3 class="tl-title" data-en="AI Trainer">Formateur en Intelligence Artificielle</h3>
                   <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
                   <span class="tl-meta">OSM'OZ <br> Été 2023 · Île-de-France</span>
                 </button>
-                <div class="tl-panel" id="exp3" hidden>
+                <div class="tl-panel" id="exp4" hidden>
                   <ul class="tl-list">
                     <li data-en="Creation of an AI training module (Games, Quiz, FAQ).">Création d’un module de formation sur l’IA (Jeux, Quiz, FAQ).</li>
                     <li data-en="Animation of the training modules.">Animation des modules de formation.</li>
@@ -138,13 +160,13 @@
             <!-- Experience 4 -->
             <article class="tl-item" data-direction="right">
               <div class="tl-card">
-                <button class="tl-header" aria-expanded="false" data-target="exp4">
+                <button class="tl-header" aria-expanded="false" data-target="exp5">
                   <span class="tl-chev" aria-hidden="true">›</span>
                   <h3 class="tl-title" data-en="Mathematics Teacher">Professeur de mathématiques</h3>
                   <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
                   <span class="tl-meta" data-en="Independent<br>2022 - Present">Indépendant<br> 2022 - Présent</span>
                 </button>
-                <div class="tl-panel" id="exp4" hidden>
+                <div class="tl-panel" id="exp5" hidden>
                   <ul class="tl-list">
                     <li data-en="Creation of mathematics courses.">Création de cours de mathématiques.</li>
                     <li data-en="Homework assistance and student mentoring.">Aide aux devoirs et accompagnement des élèves.</li>
@@ -167,25 +189,29 @@
               <h3 data-en="Language Levels">Niveaux de langues</h3>
               <ul class="pills">
                 <li class="pill"><span data-en="French — Native"> Français — natif </span></li>
-                <li class="pill"><span data-en="English — B2/C1"> Anglais — B2/C1 </span></li>
-                <li class="pill"><span data-en="Spanish — A2"> Espagnol — A2 </span></li>
+                <li class="pill"><span data-en="English — B2"> Anglais — B2 </span></li>
+                <li class="pill"><span data-en="Spanish — A2"> Espagnol — B1 </span></li>
               </ul>
             </div>
             <div class="bento-item card reveal" data-span="1">
               <h3 data-en="Strengths">Forces</h3>
               <ul class="checklist">
-                <li data-en="Rational & rigorous">Rationnel & rigoureux</li>
-                <li data-en="Autonomous & organized">Autonome & organisé</li>
-                <li data-en="Curious (research & prototypes)">Curieux (veille & protos)</li>
+                <li data-en="">Pensée critique et esprit scientifique</li>
+                <li data-en="">Esprit collaboratif et force de proposition</li>
+                <li data-en="">Capacité d’apprentissage rapide et en autonomie</li>
+                <li data-en="Structured communication">Communication structurée</li>
+                <li data-en="Persistence">Persévérance face aux problématiques complexes</li>
+
+
               </ul>
             </div>
             <div class="bento-item bento-wide card reveal" data-span="2">
               <h3 data-en="Objective">Objectif</h3>
-              <p data-en="Internship in cybersecurity / SRE / DevOps to consolidate my network & system foundations.">Alternance en <strong>cybersécurité / SRE / DevOps</strong> pour consolider mes bases réseaux & systèmes.</p>
+              <p data-en="">Etudiant en 2ème année de BUT Informatique, spécialisation Data & IA, actuellement en alternance en ybersécurité et gestion de projet. Je souhaite intégrer une école d’ingénieur afin d’approfondir mes compétences en informatique.</p>
             </div>
             <div class="bento-item card reveal" data-span="1">
               <h3 data-en="Soft skills">Soft skills</h3>
-              <p data-en="Team spirit, attention to detail, clear communication.">Esprit d’équipe, sens du détail, communication claire.</p>
+              <p data-en="Team spirit, attention to detail, clear communication, autonomous & organized.">Esprit d’équipe, sens du détail, communication claire, autonome & organisé</p>
             </div>
           </div>
         </section>
@@ -206,8 +232,8 @@
                 </button>
                 <div class="tl-panel" id="tl2" hidden>
                   <ul class="tl-list">
-                    <li data-en="Many technical and social skills"> De nombreuses comptetences techniques et sociales</li>
-                    <li data-en="Many projects in computer science"> Des projets informatique tout seul ou à plusieurs</li>
+                    <li data-en="">Parcours Data & Intelligence Artificielle </li>
+                    <li data-en="">Option Mathématiques Pour l'ingenieur</li>
                     <br>
                     <a class=btn href="../Portfolio/projets.html" data-en="See More Projects"> Voir + de projets </a>
                   </ul>
