Ajout de texte et reglage du responsive CSS

--- a/Portfolio/competences.html
+++ b/Portfolio/competences.html
@@ -364,6 +364,36 @@
               </p>
             </article>
 
+            <article class="skill-card" data-tags="base,outil">
+              <div class="skill-head">
+                <img class="skill-logo" alt="Logo MariaDB — base de données"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mariadb/mariadb-original.svg">
+                <div>
+                  <h3 class="skill-title">MariaDB</h3>
+                  <div class="mini-tags"><span>Bases de données</span></div>
+                </div>
+              </div>
+              <p class="skill-text" data-en="Database design, SQL queries, data management and backup strategies.">
+                Conception de bases de données, requêtes SQL,
+                gestion des données et stratégies de sauvegarde.
+              </p>
+            </article>
+
+            <article class="skill-card" data-tags="base,outil">
+              <div class="skill-head">
+                <img class="skill-logo" alt="Logo MySQL  — base de données"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg">
+                <div>
+                  <h3 class="skill-title">MySQL</h3>
+                  <div class="mini-tags"><span>Bases de données</span></div>
+                </div>
+              </div>
+              <p class="skill-text" data-en="Database design, SQL queries, data management and backup strategies.">
+                Conception de bases de données, requêtes SQL,
+                gestion des données et stratégies de sauvegarde.
+              </p>
+            </article>
+
             <!-- ================= OUTILS ================= -->
 
             <article class="skill-card" data-tags="outil">
