--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -80,7 +80,7 @@
               <div class="tl-card">
                 <button class="tl-header" aria-expanded="false" data-target="exp1">
                   <span class="tl-chev" aria-hidden="true">›</span>
-                  <h3 class="tl-title" data-en="Project Manager Assistant">Apprenti chef de projet</h3>
+                  <h3 class="tl-title" data-en="Apprentice project manager ">Apprenti chef de projet</h3>
                   <img class="tl-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Fond_blanc.svg" alt="" aria-hidden="true" />
                   <span class="tl-meta">Novatine <br>2025-Présent · Île-de-France</span>
                 </button>
@@ -109,10 +109,9 @@
                 </button>
                 <div class="tl-panel" id="exp2" hidden>
                   <ul class="tl-list">
-                    <li data-en="Coordination of the deployment of a Data Loss Prevention (DLP) solution within three subsidiaries.">Coordination du déploiement d'une solution de Data Loss Prevention (DLP) au sein de trois filiales.</li>
-                    <li data-en="Development and follow-up of the deployment schedule, ensuring adherence to deadlines.">Élaboration et suivi du planning de déploiement, garantissant le respect des délais.</li>
-                    <li data-en="Collaboration with technical teams to ensure smooth integration of the DLP solution.">Collaboration avec les équipes techniques pour assurer une intégration fluide de la solution DLP.</li>
-                    <li data-en="Organization of daily meetings with technical teams to ensure effective follow-up.">Organisation de réunions quotidiennes avec les équipes techniques pour assurer un suivi efficace.</li>
+                      <li data-en="Analysis of data flows and identification of information leakage risks">Analyse des flux de données et identification des risques de fuite d’information</li>
+                      <li data-en="Configuration and setting of DLP policies">Paramétrage et configuration des politiques DLP</li>
+                      <li data-en="Participation in testing phases and follow-up of incidents related to data protection policies">Participation aux phases de tests et suivi des incidents liés aux politiques de protection des données</li>
                   </ul>
                 </div>
               </div>
@@ -183,7 +182,7 @@
           <div class="bento">
             <div class="bento-item bento-lg card reveal" data-span="2">
               <h3 data-en="Who am I?">Qui suis-je ?</h3>
-              <p data-en="I am a versatile developer, focused on quality and UX, with a strong interest in cybersecurity and system administration.">Développeur polyvalent, orienté qualité & UX, avec un fort intérêt pour la cybersécurité et l’admin système.</p>
+              <p data-en="I am a student in my second year of BUT Informatique, specialization Data & IA. Currently in an alternance in cybersecurity and project management, I am looking for an engineering school to deepen my skills in computer science.">Je suis un étudiant en deuxieme année de BUT Informatique, spécialisation Data & IA. Actuellement en alternance en cybersécurité et gestion de projet, je suis à la recherche d’une école d’ingénieur pour approfondir mes compétences en informatique.</p>
             </div>
             <div class="bento-item bento-tall card reveal" data-span="1">
               <h3 data-en="Language Levels">Niveaux de langues</h3>
@@ -196,9 +195,9 @@
             <div class="bento-item card reveal" data-span="1">
               <h3 data-en="Strengths">Forces</h3>
               <ul class="checklist">
-                <li data-en="">Pensée critique et esprit scientifique</li>
-                <li data-en="">Esprit collaboratif et force de proposition</li>
-                <li data-en="">Capacité d’apprentissage rapide et en autonomie</li>
+                <li data-en="Critical thinking and scientific spirit">Pensée critique et esprit scientifique</li>
+                <li data-en="Collaborative spirit and initiative">Esprit collaboratif et force de proposition</li>
+                <li data-en="Rapid learning and autonomy">Capacité d’apprentissage rapide et en autonomie</li>
                 <li data-en="Structured communication">Communication structurée</li>
                 <li data-en="Persistence">Persévérance face aux problématiques complexes</li>
 
@@ -207,7 +206,7 @@
             </div>
             <div class="bento-item bento-wide card reveal" data-span="2">
               <h3 data-en="Objective">Objectif</h3>
-              <p data-en="">Etudiant en 2ème année de BUT Informatique, spécialisation Data & IA, actuellement en alternance en ybersécurité et gestion de projet. Je souhaite intégrer une école d’ingénieur afin d’approfondir mes compétences en informatique.</p>
+              <p data-en="I am looking to pursue a career in computer science, with a focus on cybersecurity while maintaining my interest in project management.">Poursuivre une carrière en informatique, avec un focus sur la partie cybersécurité mais en gardant cette partie gestion de projet.</p>
             </div>
             <div class="bento-item card reveal" data-span="1">
               <h3 data-en="Soft skills">Soft skills</h3>
