--- a/Portfolio/projets.html
+++ b/Portfolio/projets.html
@@ -88,7 +88,7 @@
                 src="assets/projets/p3/Rasperry.webp"
                 alt="Vignette projet Réseaux">
               <h3 data-en="Raspberry Pi Configuration">Configuration d’un Raspberry Pi</h3>
-              <div class="mini-tags"><span>Linux</span><span>Raspberry Pi</span><span data-en="Routing">Routage</span></div>
+              <div class="mini-tags"><span>Linux</span><span>Raspberry Pi</span><span>SSH</span></div>
             </article>
 
             <article class="project-card" data-project="p4" >
